src/Skia/Bindings/Sk_canvas.hs


@
void sk_canvas_draw_oval(sk_canvas_t *ccanvas, const sk_rect_t *crect, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_oval" sk_canvas_draw_oval ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * crect"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_oval'
foreign import ccall "&sk_canvas_draw_oval" p'sk_canvas_draw_oval ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_path(sk_canvas_t *ccanvas, const sk_path_t *cpath, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_path" sk_canvas_draw_path ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_path) -- ^ C argument @"const sk_path_t * cpath"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_path'
foreign import ccall "&sk_canvas_draw_path" p'sk_canvas_draw_path ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_path) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_image(sk_canvas_t *ccanvas, const sk_image_t *cimage, float x, float y, const sk_sampling_options_t *sampling, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_image" sk_canvas_draw_image ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_image) -- ^ C argument @"const sk_image_t * cimage"@
  -> CFloat -- ^ C argument @"float x"@
  -> CFloat -- ^ C argument @"float y"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_image'
foreign import ccall "&sk_canvas_draw_image" p'sk_canvas_draw_image ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_image) -> CFloat -> CFloat -> Ptr (Sk_sampling_options) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_image_rect(sk_canvas_t *ccanvas, const sk_image_t *cimage, const sk_rect_t *csrcR, const sk_rect_t *cdstR, const sk_sampling_options_t *sampling, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_image_rect" sk_canvas_draw_image_rect ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_image) -- ^ C argument @"const sk_image_t * cimage"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * csrcR"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * cdstR"@
  -> Ptr (Sk_sampling_options) -- ^ C argument @"const sk_sampling_options_t * sampling"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_image_rect'
foreign import ccall "&sk_canvas_draw_image_rect" p'sk_canvas_draw_image_rect ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_image) -> Ptr (Sk_rect) -> Ptr (Sk_rect) -> Ptr (Sk_sampling_options) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_picture(sk_canvas_t *ccanvas, const sk_picture_t *cpicture, const sk_matrix_t *cmatrix, const sk_paint_t *cpaint)
@
-}
foreign import ccall "sk_canvas_draw_picture" sk_canvas_draw_picture ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_picture) -- ^ C argument @"const sk_picture_t * cpicture"@
  -> Ptr (Sk_matrix) -- ^ C argument @"const sk_matrix_t * cmatrix"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * cpaint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_picture'
foreign import ccall "&sk_canvas_draw_picture" p'sk_canvas_draw_picture ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_picture) -> Ptr (Sk_matrix) -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_drawable(sk_canvas_t *ccanvas, sk_drawable_t *cdrawable, const sk_matrix_t *cmatrix)
@
-}
foreign import ccall "sk_canvas_draw_drawable" sk_canvas_draw_drawable ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_drawable) -- ^ C argument @"sk_drawable_t * cdrawable"@
  -> Ptr (Sk_matrix) -- ^ C argument @"const sk_matrix_t * cmatrix"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_drawable'
foreign import ccall "&sk_canvas_draw_drawable" p'sk_canvas_draw_drawable ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_drawable) -> Ptr (Sk_matrix) -> IO (()))

{- | C function signature:

@
sk_canvas_t *sk_canvas_new_from_bitmap(const sk_bitmap_t *bitmap)
@
-}
foreign import ccall "sk_canvas_new_from_bitmap" sk_canvas_new_from_bitmap ::
  Ptr (Sk_bitmap) -- ^ C argument @"const sk_bitmap_t * bitmap"@
  -> IO (Ptr (Sk_canvas)) -- ^ C return type: @"sk_canvas_t *"@

-- | Function pointer to 'sk_canvas_new_from_bitmap'
foreign import ccall "&sk_canvas_new_from_bitmap" p'sk_canvas_new_from_bitmap ::
  FunPtr (Ptr (Sk_bitmap) -> IO (Ptr (Sk_canvas)))

{- | C function signature:

@
sk_canvas_t *sk_canvas_new_from_raster(const sk_imageinfo_t *cinfo, void *pixels, size_t rowBytes, const sk_surfaceprops_t *props)
@
-}
foreign import ccall "sk_canvas_new_from_raster" sk_canvas_new_from_raster ::
  Ptr (Sk_imageinfo) -- ^ C argument @"const sk_imageinfo_t * cinfo"@
  -> Ptr (()) -- ^ C argument @"void * pixels"@
  -> CSize -- ^ C argument @"size_t rowBytes"@
  -> Ptr (Sk_surfaceprops) -- ^ C argument @"const sk_surfaceprops_t * props"@
  -> IO (Ptr (Sk_canvas)) -- ^ C return type: @"sk_canvas_t *"@

-- | Function pointer to 'sk_canvas_new_from_raster'
foreign import ccall "&sk_canvas_new_from_raster" p'sk_canvas_new_from_raster ::
  FunPtr (Ptr (Sk_imageinfo) -> Ptr (()) -> CSize -> Ptr (Sk_surfaceprops) -> IO (Ptr (Sk_canvas)))

{- | C function signature:

@
void sk_canvas_draw_annotation(sk_canvas_t *t, const sk_rect_t *rect, const char *key, sk_data_t *value)
@
-}
foreign import ccall "sk_canvas_draw_annotation" sk_canvas_draw_annotation ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * t"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * rect"@
  -> Ptr (CChar) -- ^ C argument @"const char * key"@
  -> Ptr (Sk_data) -- ^ C argument @"sk_data_t * value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_annotation'
foreign import ccall "&sk_canvas_draw_annotation" p'sk_canvas_draw_annotation ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> Ptr (CChar) -> Ptr (Sk_data) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_url_annotation(sk_canvas_t *t, const sk_rect_t *rect, sk_data_t *value)
@
-}
foreign import ccall "sk_canvas_draw_url_annotation" sk_canvas_draw_url_annotation ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * t"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * rect"@
  -> Ptr (Sk_data) -- ^ C argument @"sk_data_t * value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_url_annotation'
foreign import ccall "&sk_canvas_draw_url_annotation" p'sk_canvas_draw_url_annotation ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> Ptr (Sk_data) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_named_destination_annotation(sk_canvas_t *t, const sk_point_t *point, sk_data_t *value)
@
-}
foreign import ccall "sk_canvas_draw_named_destination_annotation" sk_canvas_draw_named_destination_annotation ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * t"@
  -> Ptr (Sk_point) -- ^ C argument @"const sk_point_t * point"@
  -> Ptr (Sk_data) -- ^ C argument @"sk_data_t * value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_named_destination_annotation'
foreign import ccall "&sk_canvas_draw_named_destination_annotation" p'sk_canvas_draw_named_destination_annotation ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_point) -> Ptr (Sk_data) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_link_destination_annotation(sk_canvas_t *t, const sk_rect_t *rect, sk_data_t *value)
@
-}
foreign import ccall "sk_canvas_draw_link_destination_annotation" sk_canvas_draw_link_destination_annotation ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * t"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * rect"@
  -> Ptr (Sk_data) -- ^ C argument @"sk_data_t * value"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_link_destination_annotation'
foreign import ccall "&sk_canvas_draw_link_destination_annotation" p'sk_canvas_draw_link_destination_annotation ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_rect) -> Ptr (Sk_data) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_image_lattice(sk_canvas_t *ccanvas, const sk_image_t *image, const sk_lattice_t *lattice, const sk_rect_t *dst, sk_filter_mode_t mode, const sk_paint_t *paint)
@
-}
foreign import ccall "sk_canvas_draw_image_lattice" sk_canvas_draw_image_lattice ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> Ptr (Sk_lattice) -- ^ C argument @"const sk_lattice_t * lattice"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * dst"@
  -> Sk_filter_mode -- ^ C argument @"sk_filter_mode_t mode"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * paint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_image_lattice'
foreign import ccall "&sk_canvas_draw_image_lattice" p'sk_canvas_draw_image_lattice ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_image) -> Ptr (Sk_lattice) -> Ptr (Sk_rect) -> Sk_filter_mode -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_image_nine(sk_canvas_t *ccanvas, const sk_image_t *image, const sk_irect_t *center, const sk_rect_t *dst, sk_filter_mode_t mode, const sk_paint_t *paint)
@
-}
foreign import ccall "sk_canvas_draw_image_nine" sk_canvas_draw_image_nine ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_image) -- ^ C argument @"const sk_image_t * image"@
  -> Ptr (Sk_irect) -- ^ C argument @"const sk_irect_t * center"@
  -> Ptr (Sk_rect) -- ^ C argument @"const sk_rect_t * dst"@
  -> Sk_filter_mode -- ^ C argument @"sk_filter_mode_t mode"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * paint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_image_nine'
foreign import ccall "&sk_canvas_draw_image_nine" p'sk_canvas_draw_image_nine ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_image) -> Ptr (Sk_irect) -> Ptr (Sk_rect) -> Sk_filter_mode -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:

@
void sk_canvas_draw_vertices(sk_canvas_t *ccanvas, const sk_vertices_t *vertices, sk_blendmode_t mode, const sk_paint_t *paint)
@
-}
foreign import ccall "sk_canvas_draw_vertices" sk_canvas_draw_vertices ::
  Ptr (Sk_canvas) -- ^ C argument @"sk_canvas_t * ccanvas"@
  -> Ptr (Sk_vertices) -- ^ C argument @"const sk_vertices_t * vertices"@
  -> Sk_blendmode -- ^ C argument @"sk_blendmode_t mode"@
  -> Ptr (Sk_paint) -- ^ C argument @"const sk_paint_t * paint"@
  -> IO (()) -- ^ C return type: @"void"@

-- | Function pointer to 'sk_canvas_draw_vertices'
foreign import ccall "&sk_canvas_draw_vertices" p'sk_canvas_draw_vertices ::
  FunPtr (Ptr (Sk_canvas) -> Ptr (Sk_vertices) -> Sk_blendmode -> Ptr (Sk_paint) -> IO (()))

{- | C function signature:
